src/module/home/_home.scss
/* ... */
.satisfy-client-images {
    display: inline-flex;
    align-items: center;
}

.satisfy-client-image {
    position: relative;
    display: inline-block;
    border: 1px solid $white-color;
    border-radius: 50%;
    margin-left: -14px;
    overflow: hidden;
    z-index: 1;

    &:first-child {
        margin-left: 0;
    }

    figure {
        display: block;
    }

    img {
        width: 100%;
        max-width: 44px;
    }

    &.add-more {
        width: 46px;
        height: 46px;
        background: $accent-color;
        display: flex;
        justify-content: center;
        align-items: center;

        h3 {
            font-size: 14px;
            color: $white-color;
        }

        i {
            font-size: 20px;
            color: $white-color;
        }
    }
}

.dark-section {
    .section-footer-text {
        &.section-satisfy-img {
            .satisfy-client-image {
                border-color: $primary-color;
            }
        }

        p,
        ul li {
            color: $white-color;
        }

        p a:hover {
            color: $white-color;
        }
    }
}

.text-anime-style-3 {
    display: inline-block;
    perspective: 400px;

    .word {
        display: inline-block;
        white-space: nowrap;
        margin-right: 6px;
    }

    .char {
        display: inline-block;
        transform: translateY(50px) rotateX(90deg);
        opacity: 0;
    }
}

/************************************/
/****     Hero Moon Section      ****/
/************************************/

/************************************/
/***   33. Home - Version 2 css	  ***/
/************************************/

/************************************/
/***   33. Home - Version 2 css	  ***/
/************************************/

.hero-moon {
    position: relative;
    height: 100vh;
    min-height: 700px;
    align-content: end;
    border-radius: 20px;
    padding: 210px 0 100px;
    margin: 15px 15px 0 15px;
    overflow: hidden;

    &::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: linear-gradient(0deg, transparent 44.3%, rgba(26, 26, 26, 0.80) 100%),
            linear-gradient(180deg, transparent 50%, rgba(26, 26, 26, 0.80) 80.14%);
        width: 100%;
        height: 100%;
        z-index: 1;
    }

    &.hero-video {
        .hero-bg-video {
            position: absolute;
            top: 0;
            right: 0;
            left: 0;
            bottom: 0;
            width: 100%;
            height: 100%;

            video {
                width: 100%;
                height: 100%;
                object-fit: cover;
            }
        }
    }

    .container {
        position: relative;
        z-index: 2;
    }
}

.hero-content-moon {
    .section-title {
        margin-bottom: 0;

        .section-sub-title {
            background: $dark-divider-color;
            backdrop-filter: blur(30px);
            -webkit-backdrop-filter: blur(30px);
        }
    }
}

.hero-info-box-moon {
    display: flex;
    flex-wrap: wrap;
    gap: 20px 30px;
    max-width: 465px;
    background: $dark-divider-color;
    border-radius: 20px;
    backdrop-filter: blur(30px);
    -webkit-backdrop-filter: blur(30px);
    padding: 10px;
    margin-left: auto;
}

.hero-info-image-moon {
    width: 100%;
    max-width: 200px;

    figure {
        height: 100%;
        display: block;
        border-radius: 10px;
    }

    img {
        width: 100%;
        height: 100%;
        aspect-ratio: 1 / 1;
        object-fit: cover;
        border-radius: 10px;
    }
}

.hero-info-content-moon {
    width: calc(100% - 230px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 20px;
    padding: 20px 20px 20px 0px;

    p {
        color: $white-color;
        font-weight: 500;
        margin: 0;
    }
}

.hero-info-btn {
    border-top: 1px solid $dark-divider-color;
    padding-top: 20px;

    .readmore-btn {
        color: $white-color;
    }
}

/************************************/
/****     About Section Moon     ****/
/************************************/

.about-us-moon {
    padding: 100px 0;
}

.about-us-image-box-moon {
    display: flex;
    flex-wrap: wrap;
    align-items: end;
    margin-right: 15px;
}

.about-us-image-box-1-moon {
    width: 36%;
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding-bottom: 30px;
}

.about-us-image-box-2-moon {
    position: relative;
    width: 64%;
}

.about-us-image-moon {
    figure {
        border-radius: 20px;
        overflow: hidden;

        img {
            width: 100%;
            aspect-ratio: 1 / 1.021;
            object-fit: cover;
            border-radius: 20px;
        }
    }
}

.about-us-image-box-1-moon {
    .about-us-image-moon {
        figure {
            margin-right: -200px;

            img {
                aspect-ratio: 1 / 0.959;
            }
        }
    }
}

.happy-customer-box-moon {
    margin-right: 20px;
}

.happy-customer-box-content-moon {
    margin-top: 20px;
}

.happy-customer-box-content-moon p {
    line-height: normal;
    margin: 0;
}

.about-us-image-box-2-moon {
    .contact-us-circle-moon {
        position: absolute;
        top: 0;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 2;

        a {
            display: inline-block;
            border-radius: 50%;
            border: 5px solid $bg-color;
        }

        img {
            width: 100%;
            max-width: 140px;
            border-radius: 50%;
            animation: infiniterotate 20s infinite linear;

            &:hover {
                animation-play-state: paused;
            }
        }
    }
}

@keyframes infiniterotate {
    100% {
        transform: rotate(360deg);
    }
}
/* ... */

